--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.509.0",
     "motion": "^12.10.5",
-    "next": "^15.2.3",
+    "next": "15.2.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
